# agnostep-theme

./: .gitignore  INSTALL.md  README.md
AGNOSTEP_ART/HELPVIEWER/: Bookshelf.tiff
AGNOSTEP_ART/SVG/: Palette_AGNOSTEP_Theme.gdr
AGNOSTEP_ART/TIFF/: Affiche.tiff  AgnostepManager.tiff  File-markdown.tiff  FileIcon_url.tiff  FileSystem_English.tiff  FileSystem_French.tiff  FileSystem_GNUstep.tiff  File_patch.tiff  Firefox.tiff  Gnu-nano.tiff  Magnify_32.tiff  Printer.tiff  Rpi-Bookshelf.tiff  SaveLink.tiff  TestCuckoo.tiff  Updater.tiff  abiword.tiff  banniere_UG.tiff  common_HomeDirectory.tiff  common_Root_PC.tiff  dir_Devel.tiff  dir_Games.tiff  dir_Tools.tiff  editor.tiff  exit.tiff  gvim.tiff  lock-screen.tiff
install/: RELEASE  RELEASE.txt  install_theme.sh  setup.sh  uninstall_theme.sh
install/RESOURCES/DEFAULTS/: NSGlobalDomain.plist  TimeMon.plist  WMState  WMState_c5c  WMState_conky  WMState_laptop  WMWindowAttributes  WindowMaker  WindowMaker_c5c  org.gap.AClock.plist  org.gap.Terminal.plist  org.gnustep.GWorkspace.TEMPLATE  org.gnustep.GWorkspace.TEMPLATE.RPI
install/RESOURCES/ICONS/: batmon.GNUstep.xpm  clip.tiff  dir_Aide.tiff  dir_Bookshelf.tiff  dir_Dev.tiff  dir_Exemples.tiff  dir_Favoris.tiff  dir_Help.tiff  dir_Jeux.tiff  dir_Livres.tiff  dir_Prog.tiff  dir_Utilitaires.tiff  dir_Utilities.tiff
install/RESOURCES/INFOS/: Info-gnustep.plist_Affiche  Info-gnustep.plist_Cenon  Info-gnustep.plist_Emacs  Info-gnustep.plist_GWorkspace  Info-gnustep.plist_NeXTGo  Info-gnustep.plist_Preview  Info-gnustep.plist_StepSync  Info-gnustep.plist_TextEdit  Info-gnustep.plist_Weather
install/RESOURCES/L18N/: install_theme.en  install_theme.fr
install/RESOURCES/L18N/StepSync/: GNUmakefile
install/RESOURCES/L18N/StepSync/French.lproj/: Localizable.strings
install/RESOURCES/MACSET/: WMState  WMWindowAttributes
install/RESOURCES/MINSET/: WMState  WMWindowAttributes  _autostart  _profile  _xinitrc  org.gnustep.GWorkspace.template
install/RESOURCES/MINSET/CachedPixmaps/: AClock.GNUstep.xpm  Ink.GNUstep.xpm  InnerSpace.GNUstep.xpm  SimpleAgenda.GNUstep.xpm  TimeMon.GNUstep.xpm
install/RESOURCES/SCRIPTS/: _xinitrc_c5c  agnostep  autostart  loading.sh  xprofile
install/RESOURCES/STYLES/: Tradition.style
install/RESOURCES/THEMES/: About_Firefox_theming.txt  BACKUP_THEME.tar  Firefox_AGNOSTEP_theme.xpi  README.txt  update_theme.sh  wmaker.style
install/RESOURCES/THEMES/AGNOSTEP.theme/Resources/: AGNOSTEP_48.tiff  Info-gnustep.plist  ThemeColors.clr  ThemeExtraColors.clr  theme_preview.tiff
install/RESOURCES/THEMES/CachedPixmaps_c5c/: AClock.GNUstep.xpm  ExitSession.GNUstep.xpm  GNUMail.GNUstep.xpm  Ink.GNUstep.xpm  InnerSpace.GNUstep.xpm  Recycler.GNUstep.xpm  SimpleAgenda.GNUstep.xpm  Terminal.GNUstep.xpm
install/RESOURCES/WALLPAPERS/MORE/: A_propos.txt
install/RESOURCES/WALLPAPERS/WINTER/: A_propos.txt
install/RESOURCES/WALLPAPERS/WORLD/: A_propos.txt
install/SCRIPTS/: colors.sh  fetcher.sh  find_app.sh  functions_goodies.sh  functions_inst_themes.sh  functions_meteo.sh  functions_misc_folders.sh  functions_misc_themes.sh  functions_prep.sh  header_template  lo.sh  log.sh  meteo_form.sh  spinner.sh  user_conf_gen.sh
install/TOOLS/: Setup_Printer  Shooting
install/TOOLS/agnostep_birthday/: BirthNotify  Birthdays.sample  birth2vcf  feast2ics  install_birthday.sh
install/TOOLS/agnostep_compton/: install_agnostep_compton.sh
install/TOOLS/agnostep_conky/: install_agnostep_conky.sh  meteo4conky  prepare_agnostep_conky.sh
install/TOOLS/agnostep_conky/en/: battery.txt  foot.rpi.txt  foot.txt  head.txt
install/TOOLS/agnostep_conky/fr/: battery.txt  foot.rpi.txt  foot.txt  head.txt
install/TOOLS/agnostep_fw/: FocusWriter.conf  install_agnostep_fw.sh
install/TOOLS/agnostep_helpviewer/: Bookshelf_32.tif  install_agnostep_hv.sh
install/TOOLS/agnostep_helpviewer/BACK/: Back.tiff  Search.tiff
install/TOOLS/agnostep_picom/: install_agnostep_picom.sh  picom.back  picom.conf
install/TOOLS/agnostep_updater/: README.md  Updater  Upgrade  Xresources  _Xresources  _dunstrc  crontab.txt  install_agnostep_updater.sh  root_crontab.txt
install/TOOLS/agnostep_wprotate/: install_wprotate.sh  wprotate.sh
install/TOOLS/dockapps/: README.txt  check_dockapps.sh  install_dockapps.sh  install_wmudmount.sh  wmtext.c.patch
install/TOOLS/dockapps/wmi_plugins/: memory.wmi  meteo.wmi
install/TOOLS/dockapps/wmtext/: wmtext
install/TOOLS/dockapps/wmtext/src/: wmtext.c
install/TOOLS/dockapps/wmtext_scripts/: birthday4wmtext  memory4wmtext  meteo4wmtext  updater4wmtext
install/TOOLS/dockapps/wmudmount/: ChangeLog  Makefile  Makefile.am  Makefile.in  aclocal.m4  asklabel.c  asklabel.h  askpass.c  askpass.h  bootstrap  button_images.xpm  chars-mask.xpm  chars.c  chars.h  conf.c  conf.h  config.h  config.h.in  config.status  configure  configure.ac  die.c  die.h  dock.c  dock.h  fsm.c  fsm.h  make-chars.pl  menu.c  menu.h  misc.h  notify.c  notify.h  wmudisks.c  wmudisks.h  wmudmount  wmudmount.1  wmudmount.c
install/TOOLS/dockapps/wmudmount/.deps/: wmudmount-asklabel.Po  wmudmount-askpass.Po  wmudmount-chars.Po  wmudmount-conf.Po  wmudmount-die.Po  wmudmount-dock.Po  wmudmount-fsm.Po  wmudmount-menu.Po  wmudmount-notify.Po  wmudmount-wmudisks.Po  wmudmount-wmudmount.Po
install/TOOLS/dockapps/wmudmount/b0rken/: Makefile  Makefile.in  malloc.c  pipe2.c
install/TOOLS/dockapps/wmudmount/debian/: README.Debian  changelog  control  copyright  menu  watch
install/TOOLS/dockapps/wmudmount/debian/source/: options
install/TOOLS/dockapps/wmudmount/icons/: Makefile  Makefile.in
install/TOOLS/dockapps/wmudmount/icons/16x16/: Makefile  Makefile.am  Makefile.in
install/TOOLS/dockapps/wmudmount/icons/22x22/: Makefile  Makefile.am  Makefile.in
install/TOOLS/dockapps/wmudmount/icons/48x48/: Makefile  Makefile.am  Makefile.in
install/TOOLS/dockapps/wmudmount/icons/scalable/: CREDIT  Makefile  Makefile.am  Makefile.in
install/TOOLS/dockapps/wmudmount/m4/: Makefile  Makefile.am  Makefile.in  statfs.m4
(+46 files in other folders)
